test/Fail/Issue6287-1/Cubical.agda
{-# OPTIONS --cubical #-}

module Issue6287-1.Cubical where

record ⊤ : Set where
  constructor tt
